--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+o Move handling of 'pieces' (bullets, target shards, etc) into
+  starship.js main event loop (instead of handling all the logic in the
+  container entity).
+
 o Draw stars with ImageData instead of fillRect
 
 o Fix multi-line message handline (line spacing is hard coded)
