update TODO and README.

--- a/README
+++ b/README
@@ -3,8 +3,8 @@ StarShip - An HTML 5 game.
 This simple game is my personal project to learn a little about HTML 5
 and JavaScript.  It uses <canvas>, <audio>, and JQuery.
 
-The code is available under the GPL, see COPYING for details.
+The code is my own, and available under the GPL, see COPYING for details.
 
-The media is available under various creative commons licenses.  See
-attrib.txt for details.
+The sounds and music are acquired from various sources, and available
+under creative commons licenses.  See attrib.txt for details.
 
